# bayes-glib

./: AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  bayes-glib-1.0.pc.in
doc/: Makefile.am  bayes-glib-sections.txt  bayes-glib.types
m4/: Makefile.am
src/: Makefile.am  bayes-classifier.c  bayes-classifier.h  bayes-glib.h  bayes-guess-private.h  bayes-guess.c  bayes-guess.h  bayes-storage-memory-private.h  bayes-storage-memory.c  bayes-storage-memory.h  bayes-storage.c  bayes-storage.h  bayes-tokenizer.c  bayes-tokenizer.h  bayes-version.h.in
tests/: Makefile.am  test-bayes-guess.c  test-bayes-storage-memory.c
tools/: Makefile.am  classifier.vala  trainer.vala
